# itog1

./: CMakeLists.txt
src/: main.cpp
